# MyMinecraft

./: CMakeLists.txt  convert_texture.py
dependencies/include/: stb_perlin.h
dependencies/include/glad/: glad.h
src/: Camera.h  Chunk.h  Player.h  Shader.h  glad.c  main.cpp  shader.fs  shader.vs  stb_perlin.cpp
